<resources>
    <string name="app_name">MyWatchlist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movies">Movies</string>
    <string name="watch_list">Watchlist</string>
    <string name="movie_details">Details</string>
    <string name="title">Movie: </string>
    <string name="description">Detailed Description</string>

    <string name="contentDescription1">Hello blank fragment</string>
    <string name="contentDescription2">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="see_description">Go to Description</string>
    <string name="visit_web">Visit on Web</string>

    <string name="popular_filter">Popular</string>
    <string name="new_filter">New Releases</string>
    <string name="top_filter">Top Rated</string>
    <string name="crime_filter">Crime</string>
    <string name="drama_filter">Drama</string>
    <string name="comedy_filter">Comedy</string>
    <string name="action_filter">Action</string>
    <string name="suspense_filter">Suspense</string>
    <string name="thriller_filter">Thriller</string>
    <string name="horror_filter">Horror</string>
    <string name="delete_all">Delete All</string>
    <string name="clear_all">Are you sure to clear all movies from watchlist?</string>
    <string name="search_for_movies">Search For Movies</string>
    <string name="search">Search</string>
    <string name="rating">Rating</string>


</resources>